--- a/src/curobo/content/configs/robot/wx250s.yml
+++ b/src/curobo/content/configs/robot/wx250s.yml
@@ -25,17 +25,17 @@ robot_cfg:
         lock_joints: null
         extra_links: null
 
-        # collision_link_names: [
-        #     "wx250s_base_link",
-        #     "wx250s_shoulder_link",
-        #     "wx250s_upper_arm_link",
-        #     "wx250s_upper_forearm_link",
-        #     "wx250s_lower_forearm_link",
-        #     "wx250s_wrist_link",
-        #     "wx250s_gripper_link",
-        #     "wx250s_left_finger_link",
-        #     "wx250s_right_finger_link"
-        # ]
+        collision_link_names: [
+            "wx250s_base_link",
+            "wx250s_shoulder_link",
+            "wx250s_upper_arm_link",
+            "wx250s_upper_forearm_link",
+            "wx250s_lower_forearm_link",
+            "wx250s_wrist_link",
+            "wx250s_gripper_link",
+            "wx250s_left_finger_link",
+            "wx250s_right_finger_link"
+        ]
         
         collision_spheres: "spheres/wx250s.yml"
         collision_sphere_buffer: 0.005
